hphp/hack/test/typecheck/expression_trees/null.php.like_types.exp
File "null.php", line 6, characters 13-16:
Typing error (Typing[4110])
  File "null.php", line 6, characters 13-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 38, characters 38-69:
  But got `dynamic` because it is an unenforceable type
